--- a/css/main.css
+++ b/css/main.css
@@ -2002,8 +2002,8 @@ h4 {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: #ffffff;
   z-index: 999;
   -webkit-transform: translateX(100%);
@@ -2076,7 +2076,8 @@ h4 {
   margin-left: 40px;
   margin-top: 64px;
   gap: 20px;
-  height: 22px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 .mobile-social__item:not(:first-child) {
   border-left: 1px solid rgba(33, 33, 33, 0.2);
