--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -18,8 +18,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: $secondaryColor;
   z-index: 999;
   transform: translateX(100%);
@@ -86,7 +86,7 @@
   margin-left: 40px;
   margin-top: 64px;
   gap: 20px;
-  height: 22px;
+  flex-wrap: wrap;
   &__item:not(:first-child) {
     border-left: 1px solid rgba(33, 33, 33, 0.2);
     padding-left: 10px;
